--- a/source/build.gradle
+++ b/source/build.gradle
@@ -4,9 +4,13 @@ buildscript {
     repositories {
         jcenter()
     }
+
+    repositories {
+        mavenCentral()
+    }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0'
-
+        //compile 'com.facebook.android:facebook-android-sdk:4.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
