--- a/source/app/build.gradle
+++ b/source/app/build.gradle
@@ -16,7 +16,7 @@ android {
 
     defaultConfig {
         applicationId "atinyshop.hacorp.laplq.atinyshop"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -34,9 +34,11 @@ repositories {
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.2'
-    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.0@aar') {
         transitive = true;
     }
+    compile 'com.github.rey5137:material:1.2.1'
+    compile 'com.android.support:appcompat-v7:21.1.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
+    compile 'com.google.android.gms:play-services:6.5.87'
 }
